# AgentTutorial

./: .gitignore  aiAgent.py  pyproject.toml  rag.py
data/: HumidityLookup.csv  IngredientCategoryLookup.csv  Ingredients.csv  NutrientLookup.csv  OrganicMatterLookup.csv  PHRangeLookup.csv  PlantHardinessZoneLookup.csv  PlantVariety_filled.csv  SalinityLookup.csv  SoilTextureLookup.csv
vectorDB/: addDataToVectorDB.py  retrieveFromVectorDB.py  vectorDBInitialization.py
